# ralph

./: .gitignore  .gitmodules  AUTHORS.md  README.md
docs/ralph_setup/: opencv_build.sh  opencv_build_course.sh  setup.sh  setup_github.sh
src/ao_pkg/: CMakeLists.txt  package.xml
src/ao_pkg/src/: CornerLineFeature.cpp  CornerLineFeature.h  FeatureExtractor.h  VisualSLAM.cpp  VisualSLAM.h  playground.cpp
src/ao_pkg/src/DataStructures/: CameraCalibration.hpp
src/ao_pkg/src/DepthEstimation/: DepthEstimatorStrategy.h  QuasiDenseStereo.h  StereoBM.cpp  StereoBM.h  StereoBMConcrete.cpp  StereoBMConcrete.h  StereoSGBM.h  StereoSGBMConcrete.cpp  StereoSGBMConcrete.h
src/ao_pkg/src/IOWrapper/: InputImageStream.h
src/ao_pkg/src/IOWrapper/ROS/: ROSImageStreamThread.cpp  ROSImageStreamThread.h
src/ao_pkg/src/util/: CameraCalibration.hpp  DataLoader.hpp  ImageUtility.cpp  ImageUtility.h  OpenCVUndistortConcrete.cpp  OpenCVUndistortConcrete.h  UndistortStrategy.cpp  UndistortStrategy.h
src/cv_bridge/: CMakeLists.txt
src/playground/: CMakeLists.txt  package.xml
src/playground/src/: node.cpp  playground.cpp
src/playground/src/DepthEstimation/: DepthEstimatorStrategy.h  StereoBMConcrete.cpp
src/playground/src/IOWrapper/: NotifyBuffer.h  TimestampedObject.h
src/playground/src/util/: DataStructures.hpp  ImageUtility.cpp  ImageUtility.h  UndistortStrategy.cpp  Undistorter.cpp
src/sensor_stabilization/: CMakeLists.txt  package.xml
src/sensor_stabilization/src/: main.cpp
src/sensor_stabilization/src/ImageStabilization/: ImageStabilization.cpp  ImageStabilization.h
src/sensor_stabilization/src/SensorStabilization/: ImageStabilization.cpp  ImageStabilization.h  PointCloudStabilization.cpp  PointCloudStabilization.h
